[package]
name = "auction-server"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.7"
sol-ctf-framework = {git = "https://github.com/otter-sec/sol-ctf-framework"}
solana-sdk = "2.2.2"
solana-program = "=2.2.1"
solana-program-test = "2.2.7"
spl-token = "=8.0.0"
threadpool = "1.8.1"
auction = { version = "0.1.0", path = "../program", features = ["no-entrypoint"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

