[package]
name = "solve"
version = "0.1.0"
edition = "2021"

# [dependencies]
# solana-program = "1.18.26"
# borsh = "0.10"  # or latest version
# borsh-derive = "0.10"

# [features]
# no-entrypoint = []


[dependencies]
solana-program = "2.2.1"
borsh = "1.5.7"
borsh-derive = "1.5.7"
# solana-program = "=1.8.14" # Use '=' to force the exact version
# solana-ed25519-program = "=1.8.14" # Add this too, if present
# solana-frozen-abi = "=1.8.14" # Add this explicitly if it's not there, to ensure alignment
[lib]
crate-type = ["cdylib", "lib"]
